--- a/src/styles/components/Forms.scss
+++ b/src/styles/components/Forms.scss
@@ -1,18 +1,68 @@
-.form-page{
-  background-color: white;
-  .container{
-    border-radius: 15px;
-    border: 2px solid white;
+.form-wrapper{
+  background-color: rgba(255, 255, 255, 0.945);
+  max-width: 500px;
+  margin-top: 60px;
+  justify-content: center;
+  border-radius: 15px;
+  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+  padding: 50px;
+  text-align: center;
+
+  .row {
+    justify-content: center;
+    margin: auto;
+    text-align: left;
+    label {
+      padding: 0px;
+      margin-bottom: 10px;
+      font-weight: 500;
+      color:  #567673;
+    }
+    input {
+      border-radius: 10px;
+      border: 1px solid rgb(222, 222, 222);
+      padding-left: 20px;
+      background-color: rgb(245, 245, 245);
+      margin-bottom: 10px;
+      padding: 10px;
+      &:focus {
+        outline: none;
+        border: 1px solid #EBD35D;
+      }
+    }
+
+    
   }
 
+  .btn {
+    margin-top: 20px;
+    text-align: center;
+    width: 40%;
+    background-color: #EBD35D;
+    background-color: #b5e2de;
+    font-weight: 500;
+    border: none;
+    &:hover{
+      box-shadow: 2px 2px 0px #EBD35D;
+      // box-shadow: 2px 2px 0px #abd8d4;
+
+    }
+  }
+
+  a {
+    text-decoration: none;
+    color: rgb(209, 7, 77);
+  }
 }
 
-form {
+.form-page{
   background-color: white;
-  padding: 20px;
-  
-}
-.search{
-  border-radius: 20px;
+  border-radius: 15px;
 
 }
+form {
+  // background-color: white;
+  // padding: 20px;
+
+}
+
