--- a/src/styles/components/MovieSearch.scss
+++ b/src/styles/components/MovieSearch.scss
@@ -2,21 +2,64 @@
   margin-top: 50px;
   justify-content: center;
   text-align: center;
-  img{
+  .card-container {
+    position: relative;
+    border-radius: 8px;
     max-height: 200px;
-  }
-  p{
-    margin: 0px;
-    font-weight: bold;
-    ul {
-      margin: 0px;
+    transition: .5s ease;
+    a {
+      text-decoration: none;
+      img{
+        max-height: 200px;
+        border-radius: 8px;
+      }
+      .overlay {
+        position: absolute;
+        z-index: 1;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: #0f0f0fcd;
+        overflow: hidden;
+        width: 100%;
+        max-height: 0;
+        transition: .5s ease;
+        border-radius: 0px 0px 10px 10px;
+        p {
+          text-decoration: none;
+          color: white;
+          font-weight: 300;
+          font-size: 1rem;
+          margin: 5px;
+        }
+      }
     }
-    span, li {
-      font-weight: normal;
+    
+    &:hover .overlay {
+      max-height: 30%;
+      
+    }
+    &:hover {
+      box-shadow: 0px 10px 20px 0px grey;
+      transform: scale(1.03);
+
     }
   }
+
+
   .content{
     margin-top: 30px;
     text-align: left;
+    p{
+      margin: 0px;
+      font-weight: bold;
+      ul {
+        margin: 0px;
+      }
+      span, li {
+        font-weight: normal;
+      }
+    }
   }
 }
+
