--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -1,23 +1,106 @@
 .movie-single-wrapper {
-  // display: flex;
-  // justify-content: center;
-  // width: 100%;
-  // width: 800px;
+
+  // align-items: center;
+  // min-height: 100vh;
   margin: 0px;
   padding: 0px;
   text-align: center;
   .carousel {
-    margin: 0 auto;
+    img {
+      height: 500px;
+      object-fit: cover;
+      object-position: top;
+    }
   }
-  img {
-    // width: 100%;
-    max-height: 500px;
-  }
-}
+  .content-wrapper {
+    padding: 20px;
+    padding-top:0px;
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 500px);
+    max-width: 1000px;
+    .info-wrapper{
+      padding: 20px;
+      background-color: rgba(244, 244, 244, 0.838);
+      border-radius: 0px 0px 10px 15px;
+      .title {
+        margin: 0px;
+        text-align: left;
+        padding: 0px;
+        align-items: center;
+        h2 {
+          margin: 0;
+        }
+        .rating-wrapper{
+          width: 30%;
+        }
+        .rating{
+          width: 50%;
+          border-radius: 10px;
+          background-color: #FFEB89;
+          box-shadow: 2px 2px 0px #EBD35D;
+          padding: 5px;
+          p {
+            margin: 0px;
+          }
 
-@media (max-width: 75%) {
-  .carousel {
-    width:auto;
-    height:auto;
+        }
+        .rating:first-of-type{
+          width: 50%;
+        }
+      }
+      .title-media {
+        margin: 0px;
+        padding: 0px;
+        margin-top: 10px;
+        width: 100%;
+        display: flex;
+        align-items: start;
+        flex-wrap: wrap;
+        max-height: 400px;
+        .poster {
+          width: 30%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          padding: 0px;
+          margin-right: 30px;
+          text-align: left;
+          img {
+            min-width: 100%;
+            max-height: 400px;
+            border-radius: 10px;
+          }
+        }
+        .youtube {
+          display: flex;
+          flex-grow: 1;
+          height: 100%;
+          iframe {
+            width: 100%;
+            height: 100%;
+            border-radius: 10px;
+          }
+        }
+      }
+    }
+
+    .content{
+      margin-top: 30px;
+      text-align: left;
+      p{
+        margin: 0px;
+        font-weight: bold;
+        ul {
+          margin: 0px;
+        }
+        span, li {
+          font-weight: normal;
+        }
+      }
+    }
+
+    
   }
+
 }
