--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -1,7 +1,9 @@
 .movie-single-wrapper {
+  // .row {
+  //   margin: 0px;
+  //   padding: 0px;
+  // }
 
-  // align-items: center;
-  // min-height: 100vh;
   margin: 0px;
   padding: 0px;
   text-align: center;
@@ -18,18 +20,21 @@
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 500px);
-    max-width: 1000px;
+    max-width: 1200px;
     .info-wrapper{
       padding: 20px;
-      background-color: rgba(244, 244, 244, 0.838);
-      border-radius: 0px 0px 10px 15px;
+      background-color: rgba(240, 240, 240, 0.838);
+      border-radius: 0px 0px 15px 15px;
       .title {
         margin: 0px;
         text-align: left;
-        padding: 0px;
+        padding: 10px;
+        border-radius: 15px 15px 0px 0px;
         align-items: center;
+        // background-color: rgb(219, 219, 219);
         h2 {
           margin: 0;
+          // text-shadow: 2px 2px 0px #EBD35D;
         }
         .rating-wrapper{
           width: 30%;
@@ -39,6 +44,7 @@
           border-radius: 10px;
           background-color: #FFEB89;
           box-shadow: 2px 2px 0px #EBD35D;
+
           padding: 5px;
           p {
             margin: 0px;
@@ -57,7 +63,7 @@
         display: flex;
         align-items: start;
         flex-wrap: wrap;
-        max-height: 400px;
+        max-height: 500px;
         .poster {
           width: 30%;
           height: 100%;
@@ -68,7 +74,7 @@
           text-align: left;
           img {
             min-width: 100%;
-            max-height: 400px;
+            max-height: 500px;
             border-radius: 10px;
           }
         }
@@ -86,11 +92,21 @@
     }
 
     .content{
-      margin-top: 30px;
+      margin-top: 0px;
       text-align: left;
+      justify-content: space-between;
+      // padding: 0px;
+      .description {
+        width: 60%;
+      }
+      .description-2 {
+        width: 40%;
+      }
       p{
         margin: 0px;
         font-weight: bold;
+        margin-top: 10px;
+        // padding: 0px;
         ul {
           margin: 0px;
         }
@@ -100,7 +116,92 @@
       }
     }
 
+    .comment-wrapper{
+      margin-top: 20px;
+        padding: 20px;
+        background-color: rgba(244, 244, 244, 0.838);
+        border-radius: 15px;
+        min-height: 340px;
+
+        .create-comment {
+          margin-top: 15px;
+          width: 30%;
+          border: 1px solid grey;
+          // min-height: 300px;
+          max-height: 270px;
+        }
+        .previous-comments {
+          width:70%;
+        }
+
+        form {
+          textarea {
+            max-height: 40%;
+            border-radius: 15px;
+            border: 1px solid lightgray;
+            color: grey;
+            font-size: 0.9rem;
+          }
+        }
+    }
+
     
   }
 
 }
+
+.comment-box {
+  background-color: rgb(232, 232, 232);
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  height: 90%;
+  transition: .2s ease;
+  &:hover {
+    // box-shadow: 0px 10px 20px 0px grey;
+    transform: scale(1.03);
+  }
+  img {
+    max-height: 50px;
+  }
+  p{
+    margin-bottom: 10px;
+  }
+  span {
+    text-align: justify;
+    font-size: 0.8rem;
+    margin-top: 5px;
+  }
+}
+
+.swiper-slide {
+  // border: 1px solid gray;
+  display: flex;
+  align-items: center;
+
+}
+
+.swiper {
+  height: 100%;
+
+}
+
+
+.swiper-pagination-bullets {
+    left: 0;
+    width: 100%;
+    top: 282px;
+}
+
+.swiper-pagination {
+  position: relative;
+}
+
+
+.swiper-wrapper {
+  position: absolute;
+}
+
