--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -1,8 +1,4 @@
 .movie-single-wrapper {
-  // .row {
-  //   margin: 0px;
-  //   padding: 0px;
-  // }
 
   margin: 0px;
   padding: 0px;
@@ -159,6 +155,7 @@
   justify-content: center;
   padding: 20px;
   height: 90%;
+  width: 100%;
   transition: .2s ease;
   &:hover {
     // box-shadow: 0px 10px 20px 0px grey;
