--- a/src/styles/components/MovieSearch.scss
+++ b/src/styles/components/MovieSearch.scss
@@ -1,17 +1,72 @@
 .search-wrapper{
-  margin-top: 50px;
+  // margin-top: 50px;
   justify-content: center;
   text-align: center;
+  max-width: 1200px;
+  .title-container{
+    padding-top: 50px;
+    padding-bottom: 20px;
+    width: 100%;
+    background-color: rgb(240, 239, 239);
+    // border-bottom:rgb(49, 49, 49);
+    h1 {
+      color: rgb(49, 49, 49);
+    }
+    button {
+      background-color:rgba(251, 251, 251, 0.9);
+      border: 1px solid rgb(211, 211, 211);
+      border-radius: 10px;
+      margin: 5px;
+  
+    }
+  }
+
+  .search-container {
+    width: 100%;
+    input {
+      border-radius: 15px;
+      border: 1px solid rgb(255, 255, 255);
+      padding-left: 20px;
+      width: 300px;
+      margin-top: 5px;
+      margin-bottom: 5px;
+      background-color: rgba(251, 251, 251, 0.9);
+      &:hover {
+        transition: 0.2s ease-in-out;
+        border: 1px solid white;
+        box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.1);
+      }
+      &:focus {
+        outline: none;
+        border: 1px solid yellow;
+      }
+    }
+    ::placeholder{
+      font-size: 0.9rem;
+    }
+  }
+  .grid-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 40px;
+    background-color: rgba(239, 239, 239, 0.655);
+    padding: 30px;
+    // padding-left: 30px;
+    
+  }
   .card-container {
     position: relative;
     border-radius: 8px;
-    max-height: 200px;
+    max-height: 300px;
     transition: .5s ease;
     a {
       text-decoration: none;
       img{
-        max-height: 200px;
+        height: 285px;
         border-radius: 8px;
+        width: 190px;
+        object-fit: cover;
       }
       .overlay {
         position: absolute;
