--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -3,6 +3,7 @@
   margin: 0px;
   padding: 0px;
   text-align: center;
+
   .carousel {
     img {
       height: 500px;
@@ -10,47 +11,56 @@
       object-position: top;
     }
   }
+
   .content-wrapper {
     padding: 20px;
-    padding-top:0px;
+    padding-top: 0px;
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 500px);
     max-width: 1200px;
-    .info-wrapper{
+
+    .info-wrapper {
       padding: 20px;
       background-color: rgba(240, 240, 240, 0.838);
       border-radius: 0px 0px 15px 15px;
+
       .title {
         margin: 0px;
         text-align: left;
         padding: 10px;
         border-radius: 15px 15px 0px 0px;
         align-items: center;
+
         // background-color: rgb(219, 219, 219);
         h2 {
           margin: 0;
           // text-shadow: 2px 2px 0px #EBD35D;
         }
-        .rating-wrapper{
+
+        .rating-wrapper {
           width: 30%;
         }
-        .rating{
+
+        .rating {
           width: 50%;
           border-radius: 10px;
           background-color: #FFEB89;
           box-shadow: 2px 2px 0px #EBD35D;
 
           padding: 5px;
+
           p {
             margin: 0px;
           }
 
         }
-        .rating:first-of-type{
+
+        .rating:first-of-type {
           width: 50%;
         }
       }
+
       .title-media {
         margin: 0px;
         padding: 0px;
@@ -60,6 +70,7 @@
         align-items: start;
         flex-wrap: wrap;
         max-height: 500px;
+
         .poster {
           width: 30%;
           height: 100%;
@@ -68,16 +79,22 @@
           padding: 0px;
           margin-right: 30px;
           text-align: left;
+
           img {
             min-width: 100%;
             max-height: 500px;
             border-radius: 10px;
           }
         }
+
         .youtube {
           display: flex;
+          // width: 60%;
           flex-grow: 1;
           height: 100%;
+          // min-height: 500px;
+          // max-height: 500px;
+
           iframe {
             width: 100%;
             height: 100%;
@@ -87,61 +104,96 @@
       }
     }
 
-    .content{
+    .content {
       margin-top: 0px;
       text-align: left;
       justify-content: space-between;
+
       // padding: 0px;
       .description {
         width: 60%;
       }
+
       .description-2 {
         width: 40%;
       }
-      p{
+
+      p {
         margin: 0px;
         font-weight: bold;
         margin-top: 10px;
+
         // padding: 0px;
         ul {
           margin: 0px;
         }
-        span, li {
+
+        span,
+        li {
           font-weight: normal;
         }
       }
     }
 
-    .comment-wrapper{
+    .comment-wrapper {
       margin-top: 20px;
-        padding: 20px;
-        background-color: rgba(244, 244, 244, 0.838);
-        border-radius: 15px;
-        min-height: 340px;
+      padding: 20px;
+      background-color: rgba(244, 244, 244, 0.838);
+      border-radius: 15px;
+      // min-height: 340px;
+      h3 {
+        // font-size: 2rem;
+      }
 
-        .create-comment {
-          margin-top: 15px;
-          width: 30%;
-          border: 1px solid grey;
-          // min-height: 300px;
-          max-height: 270px;
-        }
-        .previous-comments {
-          width:70%;
-        }
+      .create-comment {
+        margin-top: 15px;
+        max-width: 28%;
+        // border: 1px solid grey;
+        // min-height: 300px;
+        // max-height: 270px;
+        padding:0px;
+        text-align: left;
+        
 
-        form {
-          textarea {
-            max-height: 40%;
-            border-radius: 15px;
-            border: 1px solid lightgray;
-            color: grey;
-            font-size: 0.9rem;
+        textarea {
+          resize: vertical;
+          resize: horizontal;
+          width: 100%;
+          min-height: 140px;
+          max-height: 140px;
+          margin-bottom: 10px;
+          border-radius: 15px;
+          border: 1px solid lightgray;
+          color: grey;
+          font-size: 0.9rem;
+          padding: 10px;
+        }
+        .rate-container {
+          align-items: center;
+          p {
+            font-size: 1.2rem;
+            margin: 0px;
+            margin-right: 5px;
           }
         }
+        input {
+          background-color: rgb(144, 200, 200);
+          border: 1px solid transparent;
+          border-radius: 10px;
+          width: 200px;
+        }
+
+      }
+
+      .previous-comments {
+        padding-left: 30px;
+        width: 72%;
+        min-height: 100%;
+      }
+
     }
 
-    
+
   }
 
 }
@@ -157,16 +209,20 @@
   height: 90%;
   width: 100%;
   transition: .2s ease;
+
   &:hover {
     // box-shadow: 0px 10px 20px 0px grey;
     transform: scale(1.03);
   }
+
   img {
     max-height: 50px;
   }
-  p{
+
+  p {
     margin-bottom: 10px;
   }
+
   span {
     text-align: justify;
     font-size: 0.8rem;
@@ -188,17 +244,35 @@
 
 
 .swiper-pagination-bullets {
-    left: 0;
-    width: 100%;
-    top: 282px;
+  left: 0;
+  width: 100%;
+  top: 245px;
 }
 
-.swiper-pagination {
-  position: relative;
+// .swiper-pagination {
+//   position: relative;
+// }
+
+
+// .swiper-wrapper {
+//   position: absolute;
+// }
+
+.react-simple-star-rating{
+  font-size: 0.5rem;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 5px;
+  span{
+    text-align: center;
+    
+  }
+  
+  
 }
 
-
-.swiper-wrapper {
-  position: absolute;
+svg {
+  max-height: 20px;
+  max-width: 20px;
+  // margin: 0 auto;
 }
-
