--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -276,3 +276,22 @@ svg {
   max-width: 20px;
   // margin: 0 auto;
 }
+
+.edit-comment{
+  // display: block;
+  display: none;
+}
+
+.comment-display {
+  display: flex;
+  // display: none;
+  flex-direction: column;
+}
+
+.show {
+  display: flex;
+}
+
+.hide {
+  display: none;
+}
