--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -7,11 +7,11 @@
   display:flex;
   flex-direction: column;
   min-height: 100vh;
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0.51), rgba(255, 255, 255, 0.51)), url(../assets/background.jpg);
-  transform: rotate(-0.11deg);
+  background:  linear-gradient(0deg, rgba(255, 255, 255, 0.40), rgba(255, 255, 255, 0.20)),url(../assets/background.jpg);
+  transform: rotate(-0.10deg);
   background-repeat: none;
   background-size: cover;
-
+  background-position: bottom;
 }
 
 
