--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -10,6 +10,7 @@
       object-fit: cover;
       object-position: top;
     }
+    filter: drop-shadow(4px 4px 30px rgba(0, 0, 0, 0.227));
   }
 
   .content-wrapper {
@@ -22,8 +23,9 @@
 
     .info-wrapper {
       padding: 20px;
-      background-color: rgba(240, 240, 240, 0.838);
+      background-color: rgb(248, 248, 248);
       border-radius: 0px 0px 15px 15px;
+      filter: drop-shadow(4px 4px 30px rgba(0, 0, 0, 0.227));
 
       .title {
         margin: 0px;
@@ -84,6 +86,7 @@
             min-width: 100%;
             max-height: 500px;
             border-radius: 10px;
+            
           }
         }
 
@@ -94,6 +97,7 @@
           height: 100%;
           // min-height: 500px;
           // max-height: 500px;
+          filter: drop-shadow(4px 4px 30px rgba(0, 0, 0, 0.227));
 
           iframe {
             width: 100%;
@@ -138,8 +142,9 @@
     .comment-wrapper {
       margin-top: 20px;
       padding: 20px;
-      background-color: rgba(244, 244, 244, 0.838);
+      background-color: rgb(244, 244, 244);
       border-radius: 15px;
+      filter: drop-shadow(4px 4px 30px rgba(0, 0, 0, 0.227));
       // min-height: 340px;
       h3 {
         // font-size: 2rem;
