--- a/src/styles/components/MovieSingle.scss
+++ b/src/styles/components/MovieSingle.scss
@@ -145,27 +145,29 @@
       background-color: rgb(244, 244, 244);
       border-radius: 15px;
       filter: drop-shadow(4px 4px 30px rgba(0, 0, 0, 0.227));
-      // min-height: 340px;
+      min-height: 415px;
       h3 {
         // font-size: 2rem;
       }
 
       .create-comment {
         margin-top: 15px;
-        max-width: 28%;
+        width: 22%;
+        min-width: 240px;
         // border: 1px solid grey;
         // min-height: 300px;
         // max-height: 270px;
         padding:0px;
         text-align: left;
+        height: 340px;
         
 
         textarea {
-          resize: vertical;
-          resize: horizontal;
+          // resize: vertical;
+          // resize: horizontal;
           width: 100%;
-          min-height: 140px;
-          max-height: 140px;
+          min-height: 212px;
+          max-height: 212px;
           margin-bottom: 10px;
           border-radius: 15px;
           border: 1px solid lightgray;
@@ -191,9 +193,12 @@
       }
 
       .previous-comments {
-        padding-left: 30px;
+        padding-left: 20px;
+        padding-right: 0px;
+        flex-grow: 1;
         width: 72%;
-        min-height: 100%;
+        // height: 355px;
+        // min-height: 100%;
       }
 
     }
@@ -210,11 +215,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 20px;
+  justify-content: flex-start;
+  padding: 15px;
   height: 90%;
   width: 100%;
   transition: .2s ease;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-bottom: 5px;
 
   &:hover {
     // box-shadow: 0px 10px 20px 0px grey;
@@ -222,18 +230,14 @@
   }
 
   img {
-    max-height: 50px;
+    max-height: 45px;
   }
 
   p {
-    margin-bottom: 10px;
+    margin-bottom: 2px;
   }
 
-  span {
-    text-align: justify;
-    font-size: 0.8rem;
-    margin-top: 5px;
-  }
+
 }
 
 .swiper-slide {
@@ -252,7 +256,7 @@
 .swiper-pagination-bullets {
   left: 0;
   width: 100%;
-  top: 245px;
+  top: 335px;
 }
 
 // .swiper-pagination {
@@ -265,27 +269,47 @@
 // }
 
 .react-simple-star-rating{
-  font-size: 0.5rem;
-  text-align: center;
+  // font-size: 0.5rem;
+  // text-align: center;
   margin: 0px;
   margin-bottom: 5px;
   span{
-    text-align: center;
+    // text-align: center;
     
   }
   
   
 }
 
-svg {
-  max-height: 20px;
-  max-width: 20px;
-  // margin: 0 auto;
-}
+// svg {
+//   max-height: 20px;
+//   max-width: 20px;
+//   // margin: 0 auto;
+// }
 
 .edit-comment{
-  display: block;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  flex-grow: 1;
+  width: 100%;
+  text-align: center;
   // display: none;
+  textarea {
+    border-radius: 15px;
+    border: 1px solid lightgray;
+    color: grey;
+    font-size: 0.9rem;
+    padding: 10px;
+    width: 100%;
+    min-height: 80%;
+    margin-bottom: 5px;
+  }
+  input {
+    border-radius: 10px;
+    border: 1px solid lightgray;
+  }
 }
 
 .comment-display {
@@ -293,9 +317,26 @@ svg {
   // display: none;
   flex-direction: column;
   align-items: center;
-  button {
-
+  flex-grow: 1;
+  height: 100%;
+  width: 100%;
+  .comment-content {
+    flex-grow:1;
+    width: 100%;
+    p {
+      text-align: justify;
+      font-size: 0.8rem;
+      margin-top: 5px;
+    }
+    .comment-text {
+      width: 100%;
+      border: 1px solid lightgray;
+      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.461);
+      padding: 6.5px;
+    }
   }
+
 }
 
 .show {
@@ -309,4 +350,26 @@ svg {
 
 .react-simple-star-rating-tooltip {
   font-size: 0.5rem;
+}
+
+@media (max-width: 915px ){
+  .previous-comments{
+    height: 390px;
+  }
+  .swiper-pagination-bullets {
+    left: 0;
+    width: 100%;
+    top: 370px;
+  }
+}
+
+.buttons {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+  gap: 15px;
+  button {
+    border-radius: 10px;
+    border: 1px solid lightgray;
+  }
 }
