footer now sticks to bottom of page, need styling

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import './base.scss';
 @import './components/PageNavBar.scss';
 @import './components/Forms.scss';
+@import './components/About.scss';
 @import './components/MovieCard.scss';
 @import './components/MovieSearch.scss';
 @import './components/MovieSingle.scss';
