--- a/src/styles/components/Watchlist.scss
+++ b/src/styles/components/Watchlist.scss
@@ -1,8 +1,3 @@
-#watchlist-btn {
-  height: 2rem;
-  width: 5rem;
-}
-
 .grid-container {
   display: flex;
   flex-wrap: wrap;
@@ -17,41 +12,47 @@
   border-radius: 8px;
   max-height: 300px;
   transition: 0.5s ease;
-  a {
-    text-decoration: none;
-    img {
-      height: 285px;
-      border-radius: 8px;
-      width: 190px;
-      object-fit: cover;
-    }
-    .overlay {
-      position: absolute;
-      z-index: 1;
-      bottom: 0;
-      left: 0;
-      right: 0;
+  text-decoration: none;
+  img {
+    height: 285px;
+    border-radius: 8px;
+    width: 190px;
+    object-fit: cover;
+  }
+  .overlay {
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #0f0f0fcd;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    button {
       background-color: #0f0f0fcd;
-      overflow: hidden;
-      width: 100%;
-      max-height: 0;
-      transition: 0.5s ease;
-      border-radius: 0px 0px 10px 10px;
-      p {
-        text-decoration: none;
-        color: white;
-        font-weight: 300;
-        font-size: 1rem;
-        margin: 5px;
-      }
+      font-weight: 300;
+      font-size: 3rem;
+      color: azure;
+      padding-bottom: 1rem;
+      height: 5rem;
+      width: 5rem;
+      border-radius: 50%;
     }
   }
 
   &:hover .overlay {
-    max-height: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
   &:hover {
-    box-shadow: 0px 10px 20px 0px grey;
     transform: scale(1.03);
   }
 }
