--- a/src/styles/components/Watchlist.scss
+++ b/src/styles/components/Watchlist.scss
@@ -3,9 +3,9 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   gap: 40px;
-  background-color: rgba(239, 239, 239, 0.655);
+  background-color: rgb(242, 241, 241);
   padding: 30px;
-  // padding-left: 30px;
+  border-radius: 8px;
 }
 .card-container {
   position: relative;
