--- a/src/styles/components/Profile.scss
+++ b/src/styles/components/Profile.scss
@@ -1,15 +1,37 @@
 .profile-wrapper{
   max-width: 1000px;
-  margin-top: 60px;
+  // margin-top: 60px;
   justify-content: center;
   padding: 10px;
   text-align: center;
   border-radius: 15px;
-  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.1);
   padding: 25px;
-  background-color: rgba(255, 255, 255, 0.945);
-  img {
-    max-width: 300px;
+  // background-color: rgba(255, 255, 255, 0.945);
+  .profile-avatar {
+    max-width: 250px;
+    border-radius: 10px;
+  }
+  .about-wrapper {
+    background-color: rgba(255, 255, 255, 0.956);
+    padding: 25px;
+    border-radius: 15px;
+    filter: drop-shadow(4px 4px 30px rgba(0, 0, 0, 0.2));
+    .media {
+      label{
+        font-weight: bold;
+        color: rgb(61, 129, 129);
+        font-size: 1.2rem;
+      }
+      p {
+        font-size: 1.1rem;
+      }
+    }
   }
 }
 
+
+.header-img {
+  max-width: 50px;
+  border-radius: 10px;
+}
