--- a/src/styles/components/Watchlist.scss
+++ b/src/styles/components/Watchlist.scss
@@ -1,71 +1,77 @@
-.watchlist-banner {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  background-color: rgb(242, 241, 241);
-  border-radius: 8px;
-  padding: 30px;
-  height: 8rem;
-  max-width: 88vh;
-}
 
-.grid-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap: 40px;
-  background-color: rgb(242, 241, 241);
-  padding: 30px;
-  border-radius: 8px;
-  max-width: 88vh;
-}
-.card-container {
-  position: relative;
-  border-radius: 8px;
-  max-height: 300px;
-  transition: 0.5s ease;
-  text-decoration: none;
-  img {
-    height: 285px;
-    border-radius: 8px;
-    width: 190px;
-    object-fit: cover;
-  }
-  .overlay {
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #0f0f0fcd;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: 0.5s ease;
+.watchlist {
+  .watchlist-banner {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    background-color: rgb(242, 241, 241);
     border-radius: 8px;
-    button {
+    padding: 30px;
+    height: 8rem;
+    max-width: 88vh;
+  }
+  
+  .grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    gap: 40px;
+    background-color: rgb(242, 241, 241);
+    padding: 30px;
+    border-radius: 8px;
+    max-width: 88vh;
+  }
+  .card-container {
+    position: relative;
+    border-radius: 8px;
+    max-height: 300px;
+    transition: 0.5s ease;
+    text-decoration: none;
+    img {
+      height: 285px;
+      border-radius: 8px;
+      width: 190px;
+      object-fit: cover;
+    }
+    .overlay {
+      position: absolute;
+      z-index: 1;
+      bottom: 0;
+      left: 0;
+      right: 0;
       background-color: #0f0f0fcd;
-      font-weight: 300;
-      font-size: 3rem;
-      color: azure;
-      padding-bottom: 1rem;
-      height: 5rem;
-      width: 5rem;
-      border-radius: 50%;
+      overflow: hidden;
+      width: 100%;
+      height: 0;
+      transition: 0.5s ease;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 8px;
+      button {
+        background-color: #0f0f0fcd;
+        font-weight: 300;
+        font-size: 3rem;
+        color: azure;
+        padding-bottom: 1rem;
+        height: 5rem;
+        width: 5rem;
+        border-radius: 50%;
+      }
+    }
+  
+    &:hover .overlay {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
+    &:hover {
+      transform: scale(1.03);
     }
   }
-
-  &:hover .overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-  }
-  &:hover {
-    transform: scale(1.03);
-  }
+  
 }
+
+
