stylings for profile page done

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -11,7 +11,7 @@
   transform: rotate(-0.10deg);
   background-repeat: none;
   background-size: cover;
-  background-position: bottom;
+  // background-position:center;
 }
 
 
