--- a/src/styles/components/MovieSearch.scss
+++ b/src/styles/components/MovieSearch.scss
@@ -4,25 +4,41 @@
   text-align: center;
   max-width: 1200px;
   .title-container{
-    padding-top: 50px;
-    padding-bottom: 20px;
+    margin-top: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     width: 100%;
-    background-color: rgb(240, 239, 239);
+    // background-color: rgb(240, 239, 239);
+    background-color: rgba(239, 239, 239, 0.655);
+    
+    border-radius: 15px 15px 0px 0px;
     // border-bottom:rgb(49, 49, 49);
     h1 {
-      color: rgb(49, 49, 49);
+      color: rgb(59, 58, 58);
     }
-    button {
-      // background-color:rgba(251, 251, 251, 0.9);
-      border: 1px solid rgb(211, 211, 211);
-      border-radius: 10px;
-      margin: 5px;
-  
+    .button-container {
+      margin-top: 10px;
+      button {
+        // background-color:rgba(251, 251, 251, 0.598);
+        border: 1px solid rgb(211, 211, 211);
+        border-radius: 10px;
+        margin: 5px;
+        padding-left: 10px;
+        padding-right:10px;
+        font-weight: 300;
+        &:hover {
+          background-color: lightgray;
+        }
+      
+      }
+
     }
+
   }
 
   .search-container {
     width: 100%;
+    margin-bottom: 5px;
     input {
       border-radius: 15px;
       border: 1px solid rgb(255, 255, 255);
@@ -30,7 +46,8 @@
       width: 300px;
       margin-top: 5px;
       margin-bottom: 5px;
-      background-color: rgba(251, 251, 251, 0.9);
+      background-color: rgba(251, 251, 251, 0.6);
+
       &:hover {
         transition: 0.2s ease-in-out;
         border: 1px solid white;
@@ -119,5 +136,6 @@
 }
 
 .btn-clicked {
-  background-color: darkred;
+  background-color: rgb(159, 196, 189);
+  // color: white;
 }
