--- a/src/styles/components/PageNavBar.scss
+++ b/src/styles/components/PageNavBar.scss
@@ -1,7 +1,7 @@
 .navbar {
-  background: rgba(251, 251, 251, 0.51);
-  border-bottom: 1px dashed #F8D549;
-  height: 50px;
+  background: rgba(251, 251, 251, 0.588);
+  // border-bottom: 1px dashed #F8D549;
+  // min-height: 50px;
 
   .search-container {
     width: 100%;
