--- a/src/styles/components/PageNavBar.scss
+++ b/src/styles/components/PageNavBar.scss
@@ -29,6 +29,7 @@
   .nav-link{
     text-decoration: none;
     text-align: right;
+    font-weight: 300;
     // background-color: blue;
     &:hover{
       transition: 0.2s ease-in-out;
