--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,4 +10,5 @@
 @import './components/Ratings.scss';
 @import './components/Landing.scss';
 @import './components/Watchlist.scss';
+@import './components/Footer.scss';
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
